--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
         </div>
         <div>
             <p>Would you recommend us?</p>
-            <input type="radio" name="1" id="rcm1" value="nm1">
+            <input type="radio" name="recommend" id="rcm1" value="definetely">
             <label for="rcm1">Definitely</label><br>
-            <input type="radio" name="1" id="rcm2" value="nm2">
+            <input type="radio" name="recommend" id="rcm2" value="Maybe">
             <label for="rcm2">Maybe</label><br>
-            <input type="radio" name="1" id="rcm3" value="nm3">
+            <input type="radio" name="recommend" id="rcm3" value="Not Sure">
             <label for="rcm3">Not Sure</label><br>
-            <input type="radio" name="1" id="rcm4" value="nm4">
+            <input type="radio" name="recommend" id="rcm4" value="No">
             <label for="rcm4">No</label><br>
         </div>
         <div>
