--- a/Netflix/index2.html
+++ b/Netflix/index2.html
@@ -1,27 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Netflix</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="app2.js"></script>
+  <title>Document</title>
 </head>
 <body>
-    <div id="container">
-
-        <header id="header">
-            <h1>NETFLIX</h1>
-            <h3>Thank you for signing up at Netflix. Tell us more about yourself.</h3>
-
-
-
-        </header>
-
-
-
-
-
-    </div>
-    
+  
 </body>
 </html>
